# insurance-voice-call-center

./: .env.example  .gitignore  README.md  architecture.html  assignment.txt  backend.md  docker-compose.yml  frontend.md  request_api_mapping.md  requirement.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/insurance_voice/: asgi.py  factory.py
backend/insurance_voice/config/: __init__.py  settings.py
backend/insurance_voice/db/: base.py  session.py
backend/insurance_voice/db/models/: __init__.py  core.py
backend/insurance_voice/services/: approval_service.py  auth_service.py  drift_service.py  event_bus.py  gateway.py  session_service.py  session_store.py  trace_recorder.py
backend/insurance_voice/services/agents/: definitions.py  demo_client.py  runtime.py
backend/insurance_voice/services/tools/: __init__.py  base.py  insurance_tools.py
backend/insurance_voice/web/: routes.py
backend/scripts/: agent_logs.py  inspect_db.py  load_test.py
backend/tests/: fakes.py  test_agents.py  test_approval.py  test_auth_and_userdata.py  test_config.py  test_db.py  test_drift.py  test_regressions.py  test_state.py  test_tools.py  test_web.py
frontend/: index.html  reviewer.html  serve.py
reports/: demo_conversations.json  load_test_report.txt  load_test_report_llm.txt  sample_agent_log.json  sample_tool_metrics.json  sample_trace.json
reports/voice_demo/: agent_reply.txt  stt_transcript.json
